--- a/assets/scss/hugotheme/main.scss
+++ b/assets/scss/hugotheme/main.scss
@@ -4,6 +4,6 @@ img {
 
 #wrapper {
   >.bg {
-    background-image: url('../../images/overlay.png'), linear-gradient(0deg, rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0.1)), url("../../"+ $backgroundPath);
+    background-image: url('../../images/overlay.png'), linear-gradient(0deg, rgba(35,79,30, 0.2), rgba(35,79,30, 0.2)), url("../../"+ $backgroundPath);
   }
 }
